* fix horizontal overflow on home page * fix missing german translation for user-permission comp

--- a/src/app/modules/trees/components/home/home.component.less
+++ b/src/app/modules/trees/components/home/home.component.less
@@ -1,13 +1,26 @@
 @import (reference) "../../../../../theme/theme.less";
 
+.test {
+  box-sizing: border-box;
+}
+
 .profile-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
 
+  > div:not(:last-child) {
+    margin-right: @gutter2x;
+  }
+
   @media @xs, @sm {
     justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+
+    > div:not(:last-child) {
+      margin-right: 0;
+      margin-bottom: @gutter2x;
+    }
   }
 }
 
